--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <meta charset="utf-8">  
     <title>My first Bitcaster</title>
     <link type="text/css" rel="stylesheet"
-	href="http://d396qusza40orc.cloundfront.net/startup%Fcode%Fbootstrap-2.3.2.css">
+	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
       body{
       padding-top:20px;
@@ -15,10 +16,10 @@
       p.lead{
       padding-top:15px;
       }
-      .navigation,.pitch,.section1,.section2,.faw,.footer{
+      .navigation, .pitch, .section1, .section2, .faq, .footer{
       padding:10px 0px 10px 0px;
       }
-      .video,.thermometer,.order,.social{
+      .video, .thermometer, .order, .social{
       border:1px dotted;
       text-aligh:center;
       }
@@ -27,9 +28,9 @@
       height:124px;
       line-height:124px;
       }
-      .thermometer,.order,.social{
+      .thermometer, .order, .social{
       height:40px;
-      line-height:124px;
+      line-height:40px;
       }
       div.row{
       border:1px solid;
