--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container">
             <div class="row-fluid heading">
                 <div class="span12">
-                    <h1>Biological Agricultural Platform </h1>
+                    <h1>Biological Agricultural Platform. </h1>
                 </div>
             </div>
             <div class="row-fluid subheading">
