--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
             </div>
             <div class="row-fluid pitch">
                 <div class="span5 offset1 video">
-                    <img class="img-polaroid" src="http://i.imgur.com/vNwf57R.jpg?1">
+                    <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/vNwf57R.jpg?1">
                 </div>
 
 
                 <div class="span5 actions">
+		  <div class="row-fluid">
                     <div class="span8 offset2">
                         <div class="statistics">
                             <div class="span4">
@@ -157,25 +158,32 @@
                             </div>
                         </div>
                     </div>
+		    </div>
+		  <div class="row-fluid">
                     <div class="span10 offset1">
                         <div class="thermometer progress active">
                             <div class="bar bar-success" style="width:60%;"></div>
                             <div class="bar bar-warning" style="width:40%;"></div>
                         </div>
                     </div>
+		  </div>
+		  <div class="row-fluid">
                     <div class="span6 offset3 order">
                         <button class="btn btn-success btn-large">Preorder</button>
                     </div>
+		    </div>
+		  <div class="row-fluid">
                     <div class="span8 offset2 social">
                         <button class="btn btn-twitter"><i class="icon-twitter"></i>|Twitter</button>
                         <button class="btn btn-facebook"><i class="icon-facebook"></i>|facebook</button>
                     </div>
+		    </div>
                 </div>
             </div>
             <div class="row-fluid section1">
                 <div class="span5 offset1 asset">
                     
-                    <img class="img-polaroid" src="http://i.imgur.com/BEZ4ib6.jpg?1">
+                    <img class="img-polaroid" alt="Placeholder"  src="http://i.imgur.com/BEZ4ib6.jpg?1">
                 </div>
                 <div class="span5 copy">
                     <p>
@@ -191,7 +199,7 @@
 
                 </div>
                 <div class="span5 asset">
-                    <img class="img-polaroid" src="http://i.imgur.com/J9FX2vV.png?1" width="480" height="300">
+                    <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/J9FX2vV.png?1" width="480" height="300">
                 </div>
             </div>
             <div class="row-fluid faq">
