--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ vv                }
 		  </div>
 		  <div class="row-fluid">
                     <div class="span6 offset3 order">
-                        <button class="btn btn-success btn-large">Preorder</button>
+		      <a class="coinbase-button" data-code="22f3b271727b00dd3335cddbaea1876c" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/22f3b271727b00dd3335cddbaea1876c">Preorder with Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
                     </div>
 		    </div>
 		  <div class="row-fluid">
