--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ vv                }
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button> 
-                    <a class="brand" href="#">Bitstarter</a>
+                    <a class="brand" href="#">B.A.P</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
