home and bap link changed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             @media(max-width:480px){
                 .copy{
                     padding: 2.5% 10%;
-vv                }
+                }
                 .linediv-l{
                     border-bottom: 1px white solid;
                 }
@@ -124,10 +124,10 @@ vv                }
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button> 
-                    <a class="brand" href="#">B.A.P</a>
+                    <a class="brand" href="/">B.A.P</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
+                            <li class="active"><a href="/">Home</a></li>
                             <li> <a href="#about">About</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
